--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
+    box-sizing: border-box;
 }
 h1{
     font-size: 50px;
@@ -8,9 +10,27 @@ h1{
     color: rgb(36, 179, 23);
 }
 .half-width{
-    display: inline-block;
-    width: 45%;
+    margin-left: 5%;
+    padding-left: 2%;
+    width: 40%;
+    float: left;
 }
 .half-width img{
     width: 100%;
+    margin-top: 5%;
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+}
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg, rgb(118, 240, 124), rgb(12, 165, 63));
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
 }
