--- a/style.css
+++ b/style.css
@@ -6,7 +6,13 @@ body{
 h1{
     font-size: 50px;
 }
-.name-highlight{
+h2{
+    font-size: 40px;
+}
+p{
+    color: dimgray;
+}
+.green-highlight{
     color: rgb(36, 179, 23);
 }
 .half-width{
@@ -25,12 +31,42 @@ h1{
 }
 section{
     height: 500px;
+    margin-bottom: 160px;
 }
 .link-button{
     text-decoration: none;
-    background-image: linear-gradient(45deg, rgb(118, 240, 124), rgb(12, 165, 63));
+    background-image: linear-gradient(45deg, #76f07c, #0ca53f);
     padding: 10px 20px;
     border-radius: 5px;
     color: white;
     font-weight: bold;
+}
+.dream-area{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.single-experience{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 10px;
+    height: 80%;
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#full-stack{
+    border-left: 8px solid;
+    border-image: linear-gradient(180deg,#ee0a8f, #47ff84);
+    border-image-slice: 1;
+}
+#baby-stack{
+    border-left: 8px solid;
+    border-image: linear-gradient(180deg,#0000ff, #00ffff);
+    border-image-slice: 1;
+}
+footer{
+    text-align: center;
+    margin-bottom: 40px;
 }
